# ura-audit

./: .gitignore  README.md  pom.xml  pyproject.toml
config/: catalog.yaml  date_patterns.yaml
docs/: AM_DICTIONARY.xls  HEADER_FILE.xlsx  HEADER_OLD_OCS.xlsx  HEADER_PUNE.xlsx
docs/superpowers/plans/: 2026-04-15-airtel-data-availability-plan.md  2026-04-16-airtel-availability-java.md
docs/superpowers/specs/: 2026-04-15-airtel-data-availability-design.md
src/airtel_availability/: classifier.py  date_extractor.py
src/main/java/ug/ura/audit/: Main.java
src/main/java/ug/ura/audit/core/: CatalogEntry.java  CatalogLoader.java  Classifier.java  ClassifyResult.java  DateExtractor.java  DatePatternEntry.java  DateResult.java
src/main/java/ug/ura/audit/organize/: TreeOrganizer.java
src/main/java/ug/ura/audit/report/: AvailabilityWriter.java  ManifestWriter.java
src/main/java/ug/ura/audit/scan/: EnrichedEntry.java  FileEntry.java  FileWalker.java
src/test/java/ug/ura/audit/core/: CatalogLoaderTest.java  ClassifierTest.java  DateExtractorTest.java  DateExtractorUnitTest.java
src/test/java/ug/ura/audit/organize/: TreeOrganizerTest.java
src/test/java/ug/ura/audit/report/: AvailabilityWriterTest.java  ManifestWriterTest.java
src/test/java/ug/ura/audit/scan/: FileWalkerTest.java
src/test/resources/fixtures/: tiny_catalog.yaml
tests/: conftest.py  test_catalog.py  test_classifier.py  test_date_extractor.py
