[project]
name = "airtel-availability"
version = "0.1.0"
description = "Data availability scanner for the Airtel URA audit"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "openpyxl>=3.1",
    "paramiko>=3.4",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.setuptools.packages.find]
where = ["src"]
